2004-04-12  Jeffrey Stedfast  <fejj@ximian.com>

	* em-utils.c (em_uri_to_camel): If the provider is unavailable,
	return euri like the other fail cases. Fixes bug #56846.

2004-04-10  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* evolution-mail.schemas.in.in.h: Correct typo s/hight/height/ at
	"Subscribe dialog default hight"

2004-04-09  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-config.c (mail_config_init): Don't bother adding the
	autogen sig here, e-signature-list.c handles this now.

	* em-migrate.c (em_upgrade_accounts_1_4): Migrate the signature
	uids. Fixes bug #56726.

2004-04-09  Chris Toshok  <toshok@ximian.com>

	* importers/pine-importer.c (import_contact): use
	e_destination_export_to_vcard_attribute instead of exporting to
	xml, and use e_contact_set_attributes.

	* em-utils.c (em_utils_camel_address_to_destination):
	EABDestination -> EDestination.
	(reply_get_composer): same
	(post_reply_to_message): same.

	* em-composer-utils.c (ask_confirm_for_unwanted_html_mail):
	EABDestination -> EDestination.
	(composer_get_message): same.

2004-04-09  Radek Doulik  <rodo@ximian.com>

	* em-format-html.c (efh_format_headers): add width=16 height=16 to
	rupert's image so that it doesn't flicker/move

2004-04-09  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-selection.c (em_select_folder): Set the excluded bits
	on the folder-tree. Don't allow the user to xfer messages into
	folders which are: NoSelect, Virtual, nor vTrash. Fixes bug
	#56229.

2004-04-09  Dan Winship  <danw@ximian.com>

	* em-folder-view.c (emfv_init): Create an
	EUserCreatableItemsHandler for the view.
	(emfv_finalise): Unref it.
	(emfv_activate): Activate it

	* mail-component.c (impl__get_userCreatableItems): add
	object/folder flags to the items

2004-04-08  Jeffrey Stedfast  <fejj@ximian.com>

	* em-migrate.c (cp_r): Now takes a pattern argument to limit files
	that get copied over (so we can limit imap cache to only the
	summary files - makes it faster).
